// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line Decoration line includes internal link: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "content": "",
            "href": "Link",
            "pathType": "relative",
            "raw": "[Link]",
            "type": "link",
          },
        ],
        "raw": "[* [Link]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Decoration line includes internal link: toMatchSnapshotWhenParsing 2`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "content": "example",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "[https://example.com example]",
            "type": "link",
          },
        ],
        "raw": "[* [https://example.com example]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Line that have multi node: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
      Object {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Multi \`]\`: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "decos": Array [
          "*-1",
        ],
        "nodes": Array [
          Object {
            "raw": "[Link",
            "text": "[Link",
            "type": "plain",
          },
        ],
        "raw": "[* [Link]",
        "rawDecos": "*",
        "type": "decoration",
      },
      Object {
        "raw": "\`code\`",
        "text": "code",
        "type": "code",
      },
      Object {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
      Object {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;
